@@ -1,0 +1,52 @@
+package org.apache.cayenne.testdo.inheritance_with_enum.auto;
+
+import java.util.List;
+
+import org.apache.cayenne.CayenneDataObject;
+import org.apache.cayenne.exp.Property;
+import org.apache.cayenne.testdo.inheritance_with_enum.Dependent;
+
+/**
+ * Class _Root was generated by Cayenne.
+ * It is probably a good idea to avoid changing this class manually,
+ * since it may be overwritten next time code is regenerated.
+ * If you need to make any customizations, please use subclass.
+ */
+public abstract class _Root extends CayenneDataObject {
+
+    private static final long serialVersionUID = 1L; 
+
+    public static final String ID_PK_COLUMN = "id";
+
+    public static final Property<String> NAME = Property.create("name", String.class);
+    public static final Property<Short> TYPE = Property.create("type", Short.class);
+    public static final Property<List<Dependent>> DEPENDENTS = Property.create("dependents", List.class);
+
+    public void setName(String name) {
+        writeProperty("name", name);
+    }
+    public String getName() {
+        return (String)readProperty("name");
+    }
+
+    public void setType(short type) {
+        writeProperty("type", type);
+    }
+    public short getType() {
+        Object value = readProperty("type");
+        return (value != null) ? (Short) value : 0;
+    }
+
+    public void addToDependents(Dependent obj) {
+        addToManyTarget("dependents", obj, true);
+    }
+    public void removeFromDependents(Dependent obj) {
+        removeToManyTarget("dependents", obj, true);
+    }
+    @SuppressWarnings("unchecked")
+    public List<Dependent> getDependents() {
+        return (List<Dependent>)readProperty("dependents");
+    }
+
+
+}
