@@ -1,0 +1,28 @@
+package org.apache.cayenne.testdo.inheritance_with_enum.auto;
+
+import org.apache.cayenne.exp.Property;
+import org.apache.cayenne.testdo.inheritance_with_enum.Root;
+import org.apache.cayenne.testdo.inheritance_with_enum.Type;
+
+/**
+ * Class _Sub was generated by Cayenne.
+ * It is probably a good idea to avoid changing this class manually,
+ * since it may be overwritten next time code is regenerated.
+ * If you need to make any customizations, please use subclass.
+ */
+public abstract class _Sub extends Root {
+
+    private static final long serialVersionUID = 1L; 
+
+    public static final String ID_PK_COLUMN = "id";
+
+    public static final Property<Type> ENUM = Property.create("enum", Type.class);
+
+    public void setEnum(Type _enum) {
+        writeProperty("enum", _enum);
+    }
+    public Type getEnum() {
+        return (Type)readProperty("enum");
+    }
+
+}
