@@ -26,6 +26,7 @@ CAY-2388 Modeler: Visualization issues with undo/redo actions for attributes and
 CAY-2389 DbEntity qualifier with DbPath expression translates into wrong SQL
 CAY-2392 Modeler: Unable to remove DataNode
 CAY-2401 Modeler: NPE in ObjEntity sync action
+CAY-2405 Broken prefetch of entity with inheritance and attribute with custom java type
 
 ----------------------------------
 Release: 4.0.B2
